change the title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Font List on Web</title>
+    <title>Font List on the Web</title>
     <link href="style.css" rel="stylesheet" />
     <script src="index.js"></script>
   </head>
