load font after a user action

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ Unique and rich typefaces with love.</textarea
     </div>
     </nav>
     <main>
+      <div id="initialize">⬅</div>
       <ul id="font-list"></ul>
     </main>
   </body>
